# aYan-ray

./: .gitignore  CMakeLists.txt  example.cpp  main.cpp
1st_party/: readme.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
first_party/include/throwless/: Error.hpp  Result.hpp
include/ayan/math/: mat.hpp  vec.hpp
include/ayan/sync/barrier/: Barrier.hpp
include/ayan/sync/condvar/: CondVar.hpp
include/ayan/sync/detail/futex/: futex.hpp
include/ayan/sync/detail/mutex/: LockGuard.hpp  UniqueLock.hpp
include/ayan/sync/mutex/: Mutex.hpp
include/ayan/sync/waitgroup/: WaitGroup.hpp
src/: CMakeLists.txt
src/config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigErr.hpp  config.ini
src/job_system/job/: Job.cpp  Job.hpp
src/job_system/thread_pool/: ThreadLocalDeq.cpp  ThreadLocalDeq.hpp  WorkStealingDeq.hpp
src/logger/: CMakeLists.txt  LogErr.hpp  Logger.cpp  Logger.hpp
src/math/: CMakeLists.txt
src/math/detail/: validate.hpp
src/math/matrix/: fwd.hpp  mat4.hpp
src/math/matrix/impl/: mat4.hpp
src/math/vec/: fwd.hpp  validate.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/math/vec/impl/: vec2.hpp  vec3.hpp  vec4.hpp
src/sync/: CMakeLists.txt
src/sync/barrier/: Barrier.cpp  Barrier.hpp
src/sync/condvar/: CondVar.cpp
src/sync/detail/mutex/: LockGuard.cpp  LockGuard.hpp  UniqueLock.cpp  UniqueLock.hpp
src/sync/mutex/: Mutex.cpp  Mutex.hpp
src/sync/waitgroup/: WaitGroup.cpp  WaitGroup.hpp
src/task_system/task/: Task.cpp  Task.hpp
src/task_system/thread_pool/: ThreadLocalDeq.cpp  ThreadLocalDeq.hpp  WorkerThread.hpp
tests/config/: CMakeLists.txt  ConfigTest.cpp
tests/config/test_configs/: edge_cases.ini  empty_file.ini  invalid_format.ini  types_test.ini  valid_basic.ini  with_comments.ini
